# airbnb-rfm-pyspark

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
config/: settings.py
src/airbnb_rfm_pyspark/business/: recommendations.py
src/airbnb_rfm_pyspark/core/: data_quality.py  logger.py  pipeline_monitor.py  spark_session.py
src/airbnb_rfm_pyspark/data/: ingestion.py
src/airbnb_rfm_pyspark/processing/: cleaners.py  rfm_engine.py
src/airbnb_rfm_pyspark/streamlit/: app.py
src/airbnb_rfm_pyspark/streamlit/.streamlit/: config.toml
src/airbnb_rfm_pyspark/streamlit/components/: charts.py  header.py  kpis.py  recommendations.py
src/airbnb_rfm_pyspark/streamlit/utils/: theme.py
tests/: test_data_quality.py  test_pipeline_e2e.py
